  "pat -> .", which are treated by the redundancy check. (Jacques Garrigue)
- PR#6374: allow "_ t" as a short-hand for "(_, _, ..) t" for n-ary type
  constructors (Alain Frisch)
- PR#6714: allow [@@ocaml.warning] on most structure and signature items:
  values, modules, module types
  (Peter Zotov)
- GPR#26: support for "(type a b)" as syntactic sugar for "(type a) (type b)"
  (Gabriel Scherer)
* GPR#69: Custom index operators: ( .() ), ( .[] ), ( .{} ) etc.
  (Florian Angeletti)
  The syntax "foo.(bar) <- baz" now desugars into "( .()<- ) foo bar baz"; this
  should allow user to define their own notations by overriding.
  The bigarray notations ( .{} ), ( .{,} ) etc. are defined in the Bigarray
  module, which means that the foo.{bar,baz} syntactic sugar is only available
  when the Bigarray module is opened; this can break existing programs,
  which should be fixed by opening the Bigarray module.
- GPR#88: allow field punning in object copying expressions:
    {< x; y; >} is sugar for {< x = x; y = y; >}
  (Jeremy Yallop)
- GPR#167: allow to annotate externals' arguments and result types so
  they can be unboxed or untagged. Supports untagging int and unboxing
  int32, int64, nativeint and float.
  (Jérémie Dimino, Mark Shinwell)
- GPR240: replace special annotations on externals by attributes:
  * "float" is generalized to [@@unboxed]
  * "noalloc" becomes [@@noalloc]
  Deprecate "float" and "noalloc".
  (Jérémie Dimino)
- GPR#254: @ocaml.arg_on_literal_pattern attribute on constructors to
  warn when the argument is matches against a constant pattern.  This
  attribute is applied on predefined exception constructors which
  take an purely informational (with no stability guarantee) message.
  (Alain Frisch)
- GPR#173: [@inline] and [@inlined] attributes (for function declarations
  and call sites respectively) to control inlining
  (Pierre Chambart, Mark Shinwell)

Compilers:
- PR#4800: better compilation of tuple assignment (Gabriel Scherer and