@@ -39,6 +39,6 @@ Error: Signature mismatch:
          functor (X : sig  end) -> sig  end
 #     module X : functor (X : sig  end) (Y : sig  end) (Z : sig  end) -> sig  end
 #   module Y : functor (X : sig  end) (Y : sig  end) (Z : sig  end) -> sig  end
-# module Z : functor (_ : sig  end) (_ : sig  end) (_ : sig  end) -> sig  end
+# module Z : sig  end -> sig  end -> sig  end -> sig  end
 #   module GZ : functor (X : sig  end) () (Z : sig  end) -> sig  end
 # 
